samples/_failures_safe/1761165744_7d77b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_383b00d6.c: In function ‘main’:
./samples/SAFE/__tmp_383b00d6.c:128:25: error: ‘hex’ undeclared (first use in this function)
  128 |     size_t input_size = hex
      |                         ^~~
./samples/SAFE/__tmp_383b00d6.c:128:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_383b00d6.c:128:5: error: expected ‘,’ or ‘;’ at end of input
  128 |     size_t input_size = hex
      |     ^~~~~~
./samples/SAFE/__tmp_383b00d6.c:128:5: error: expected declaration or statement at end of input
